---- Changes since 1.150 ----
Added support for LVM2, as used in the new 2.6 Linux kernel.
---- Changes since 1.270 ----
When viewing a physical volume, the space used by each logical volume on it is displayed. Similarly, when viewing a logical volume, the amount of space contributed by each physical volume is displayed.
---- Changes since 1.290 ----
Fixed display of space used on each physical volume by a logical volume for LVM version 2.
---- Changes since 1.390 ----
Re-designed the module's main page to use tabs, and added an option to show volumes and groups in tables (with more information) instead of using icons.
Converted all user interface code to use the new Webmin UI library.
Fixed the command used to move data to another physical volume under LVM 2.
---- Changes since 1.410 ----
The percentage of a snapshot's blocks used is now shown on the Edit Snapshot page.
---- Changes since 1.440 ----
Filesystem space used is show on the logical volume list, and the field for a new volume's size is more user-friendly.
When using newer versions of the resize2fs command, EXT filesystems can be shrunk as well as enlarged.
---- Changes since 1.470 ----
When creating a logical volume, size can now be specified as a fraction of the volume group size, free space, or free space on some physical volume.
---- Changes since 1.480 ----
Added an option to force addition of a physical volume to a group.
Cleaned up code to use quotemeta instead of manual quoting.
---- Changes since 1.500 ----
Added support for creating EXT4 filesystems.
When editing a logical volume, the size is shown in GB or TB where possible.
---- Changes since 1.510 ----
Mounted ext3+, reiser, xfs and jfs logical volumes can now have their filesystem size increased, without needing an un-mount. Thanks to Caspar Smit for the suggestions and patches to implement this.
When editing a logical volume that is already in /etc/fstab, don't allow the filesystem to format it as to be changed, to prevent a mismatch.